ingress/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /app1/
        pathType: Prefix
        backend:
          service:
            name: myapp1-service
            port:
              number: 80
      - path: /app2/
        pathType: Prefix
        backend:
          service:
            name: usermgmt-webapp-service
            port:
              number: 80
      - path: /app2/
        pathType: Prefix
        backend:
          service:
            name: my-app-v3
            port:
              number: 80
